--- a/BitsandPizzas/app/src/main/AndroidManifest.xml
+++ b/BitsandPizzas/app/src/main/AndroidManifest.xml
@@ -20,7 +20,12 @@
         <activity
             android:name=".OrderActivity"
             android:label="@string/create_order"
+            android:parentActivityName=".MainActivity" />
+
+        <activity
+            android:name=".PizzaDetailActivity"
             android:parentActivityName=".MainActivity"/>
+
     </application>
 
 </manifest>
